--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-karma": "2.0.0",
     "grunt-template-jasmine-istanbul": ">=0.3.3",
     "grunt-umd": ">=2.3.5",
+    "jasmine-core": "^2.5.2",
     "karma": "1.3.0",
     "karma-chrome-launcher": "2.0.0",
     "karma-jasmine": "1.0.2",
